# kernel-crawler

./: .gitignore  .yamllint  LICENSE  OWNERS  README.md  pyproject.toml  release.md  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker.yml  lint.yml  release.yml  update-kernels.yml
kernel_crawler/: __init__.py  aliyunlinux.py  almalinux.py  amazonlinux.py  archlinux.py  bottlerocket.py  centos.py  container.py  crawler.py  deb.py  debian.py  fedora.py  flatcar.py  git.py  main.py  minikube.py  opensuse.py  oracle.py  photon.py  redhat.py  repo.py  rockylinux.py  rpm.py  talos.py  ubuntu.py
kernel_crawler/utils/: download.py  py23.py
scripts/: format.sh  lint.sh  test.sh
site/: index.html
