[tool.poetry]
name = "kernel-crawler"
packages = [{include = "kernel_crawler"}]
version = "1.0.0"
description = "Efficiently crawl and track Linux kernel versions with Kernel"
authors = ["gitworkflows <118260833+gitworkflows@users.noreply.github.com>"]
repository = "https://github.com/khulnasoft/kernel-crawler"
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
kernel-crawler = "kernel_crawler.cli:main"

[tool.poetry.dependencies]
python = ">=3.12"
lxml = "*"
click = "*"
requests = "*"
docker = "*"
semantic-version = "*"
pygit2 = "*"
beautifulsoup4 = "*"
rpmfile = "*"
zstandard = "*"
ruff = ">=0.9.1,<0.10.0"
pytest = "*"
flake8 = "*"
types-requests = "*"
types-beautifulsoup4 = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
rope = "^1.0.0"
isort = "^5.10.1"
mypy = "^0.950"
pre-commit = "^2.18.1"

[tool.ruff]
line-length = 145
target-version = "py312"
select = ["E", "F", "B", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=kernel_crawler"

[tool.coverage.run]
source = ["kernel_crawler"]
branch = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
